[package]
name = "lovely_env_logger"
version = "0.6.0"
description = "a visually lovely env_logger"
edition = '2021'
repository = "https://github.com/borisfaure/lovely-env-logger"
authors = ["Boris Faure <boris@fau.re>", "Sean McArthur <sean@seanmonstar>"]
license = "MIT/Apache-2.0"
categories = ["development-tools::debugging"]
keywords = ["log", "logger", "logging"]
readme = "README.md"

include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "src/**/*"
]

[dependencies]
log = "0.4"


[dependencies.chrono]
version = "0.4"
optional = true

[dependencies.env_logger]
# please also update doc link on examples/with_builder_1.rs
version = "0.10"
default-features = false
features = ["auto-color"]

[features]
default = ["humantime", "reltime", "regex"]
humantime = ["env_logger/humantime"]
reltime = ["dep:chrono"]
regex = ["env_logger/regex"]
